--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/IcelandSpar/msg-app-backend#readme",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.14.0"
   }
 }
