--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
